Fixed bug when secured preview images not rendered; Fixed bugs ffmpeg video decoder of bad playing C# stream video; Extended db with new column OriginFileSize

--- a/BlindCatAvalonia/Views/HomeView.axaml
+++ b/BlindCatAvalonia/Views/HomeView.axaml
@@ -8,7 +8,7 @@
     xmlns:models="using:BlindCatCore.Models"
     xmlns:sd="using:BlindCatAvalonia.SDcontrols"
     xmlns:vm="clr-namespace:BlindCatCore.ViewModels;assembly=BlindCatCore"
-    x:Class="BlindCatAvalonia.HomeView"
+    x:Class="BlindCatAvalonia.Views.HomeView"
     x:DataType="vm:HomeVm"
     Name="root"
     Padding="10"
